--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,15 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
       TZ: 'Asia/Tokyo'
-    volumes:
-      - quisapi_pg_data:/var/lib/postgresql/data
     ports:
       - "${POSTGRES_PORT}:5432"
     tty: true
 
-volumes:
-  quisapi_pg_data:
+  python:
+    image: python:3.10
+    container_name: quisapi-python
+    ports:
+      - "${PYTHON_PORT}:8000"
+    tty: true
+    depends_on:
+      - postgres
