--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
         ipv4_address: 192.168.200.100
     ports:
       - "${POSTGRES_PORT}:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
     tty: true
 
 networks:
@@ -42,3 +44,6 @@ networks:
       config:
         - subnet: 192.168.200.0/24
           gateway: 192.168.200.1
+
+volumes:
+  pg_data:
