--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,30 @@ version: "3.9"
 
 services:
   postgres:
+    container_name: quisapi-postgres
     env_file: .env
     image: postgres:14
-    container_name: quisapi-postgres
     environment:
-      POSTGRES_DB: ${POSTGRES_DB_NAME}
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
-      TZ: 'Asia/Tokyo'
     ports:
       - "${POSTGRES_PORT}:5432"
     tty: true
-
-  python:
-    image: python:3.10
-    container_name: quisapi-python
-    build: .
     volumes:
-      - .:/root/src/QuisAPI
-    ports:
-      - "${PYTHON_PORT}:8000"
-    tty: true
+      - quisapi_pg_data:/var/lib/postgresql/data
+
+  pgadmin:
+    env_file:
+      - .env
+    image: dpage/pgadmin4:6
     depends_on:
       - postgres
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${EMAIL_ADDRESS}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
+    tty: true
+    ports:
+      - '8080:80'
+
+volumes:
+  quisapi_pg_data:
