--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: "3.9"
 
 services:
+  api:
+    env_file: .env
+    build: .
+      args:
+        - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
+        - POSTGRES_DB=${POSTGRES_DB}
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - POSTGRES_PORT=${POSTGRES_PORT}
+    container_name: quispai-python
+    depends_on: postgres
+    ports:
+      - "${PYTHON_PORT}:8000"
+    tty: true
+
   postgres:
     container_name: quisapi-postgres
     env_file: .env
