--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         - POSTGRES_USER=${POSTGRES_USER}
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         - POSTGRES_PORT=${POSTGRES_PORT}
-    container_name: quispai-python
+    container_name: quisapi-python
     depends_on:
       - postgres
     ports:
@@ -21,7 +21,7 @@ services:
     volumes:
       - .:/var/www
     tty: true
-    working_dir: /var/www/quisapi
+    working_dir: /var/www
     command: >
       bash -c "
         ./wait-for-it.sh postgres:5432 -- python manage.py migrate &&
@@ -41,5 +41,15 @@ services:
     volumes:
       - quisapi_pg_data:/var/lib/postgresql/data
 
+  nginx:
+    image: nginx:latest
+    container_name: quisapi-nginx
+    env_file: .env
+    ports:
+      - "${NGINX_PORT}:80"
+    volumes:
+      - quisapi.conf:/etc/nginx/conf.d
+
 volumes:
   quisapi_pg_data:
+  quisapi.conf:
