--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         - POSTGRES_PORT=${POSTGRES_PORT}
     container_name: quisapi-python
-#    volumes:
+    volumes:
+      - django_static:/var/www/quisapi/static
 #      - gunicorn:/var/run/gunicorn
     depends_on:
       - postgres
@@ -37,6 +38,7 @@ services:
       - "80:80"
     volumes:
       - ./django.conf:/etc/nginx/conf.d/django.conf
+      - django_static:/var/www/quisapi/static
 #      - gunicorn:/var/run/gunicorn
 
   postgres:
@@ -54,5 +56,6 @@ services:
 
 volumes:
   quisapi_pg_data:
+  django_static:
 #  gunicorn:
 #    driver: local
